src/objects/Event_Application__c.object
<CustomObject>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Applications</relationshipLabel>
        <relationshipName>Event_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Applications</relationshipLabel>
        <relationshipName>Event_Applications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Event Application</label>
    <nameField>
        <displayFormat>EVT-APP-{0000}</displayFormat>
        <label>Event Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Apply_to_event_in_the_past</fullName>
        <active>true</active>
        <errorConditionFormula>CreatedDate &gt;  Event__r.End_Date__c</errorConditionFormula>
        <errorMessage>You are not able to apply to the event in the past</errorMessage>
    </validationRules>
</CustomObject>